Add glossary entries for cultural continuity and discrimination

--- a/index.html
+++ b/index.html
@@ -715,6 +715,10 @@
       pron: "/HAIR-uh-tij/",
       def: "What gets passed down—culture, language, traditions, stories."
     },
+    "cultural continuity": {
+      pron: "/KUL-chuh-rul kon-tin-NOO-uh-tee/",
+      def: "Keeping cultural practices, beliefs, and community ties flowing from one generation to the next."
+    },
     "descendants": {
       pron: "/dih-SEND-ents/",
       def: "Kids of kids of kids—future generations in a family or people."
@@ -735,9 +739,17 @@
       pron: "/SARE-uh-moh-neez/",
       def: "Organized traditions to honor people, the land, and ancestors."
     },
+    "discrimination": {
+      pron: "/dis-krim-uh-NAY-shun/",
+      def: "Unfair treatment of people because of who they are—race, culture, language, or identity."
+    },
     "endangered (language)": {
       pron: "/en-DANE-jerd/",
       def: "Not many speakers left—if folks don’t learn it, it could fade out."
+    },
+    "endangered": {
+      pron: "/en-DANE-jerd/",
+      def: "At serious risk of being lost—like a species, culture, or language on the brink."
     },
     "dictionary (Lenape Talking Dictionary)": {
       pron: "/DIK-shuh-ner-ee/",
