--- a/index.html
+++ b/index.html
@@ -144,6 +144,22 @@
 </head>
 <body class="bg-gray-100">
 
+  <section class="max-w-4xl mx-auto my-4 p-4 border rounded-lg bg-gray-50">
+    <h4 class="font-semibold mb-2">Student Info</h4>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+      <label class="block text-sm">Student Name
+        <input id="siName" class="mt-1 w-full border rounded p-2" placeholder="Last, First" />
+      </label>
+      <label class="block text-sm">Student Email
+        <input id="siEmail" class="mt-1 w-full border rounded p-2" placeholder="s100234@nchs.org" />
+      </label>
+      <label class="block text-sm">Period
+        <input id="siPeriod" class="mt-1 w-full border rounded p-2" placeholder="3" />
+      </label>
+    </div>
+    <p class="text-xs text-gray-600 mt-2">Saved on this Chromebook for next time.</p>
+  </section>
+
   <!-- Northside header with logo + Highlighter tools -->
   <header class="bg-gradient-to-r from-purple-700 to-purple-900 text-white">
     <div class="max-w-6xl mx-auto px-4 py-4 flex items-center justify-between">
